Fix navbar alignment.

--- a/res/main.css
+++ b/res/main.css
@@ -17,7 +17,7 @@ nav ul {
   background-color: #202020;
   overflow: hidden;
   padding: 0;
-  text-align: center;
+  text-align: left;
   margin: 0;
   -webkit-transition: max-height 0.4s;
   -ms-max-height: 0.4s;
